--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/styles": "^4.10.0",
     "gatsby": "^2.23.1",
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-emotion": "^4.3.3",
     "gatsby-plugin-manifest": "^2.4.10",
+    "gatsby-plugin-material-ui": "^2.1.9",
     "gatsby-plugin-netlify": "^2.3.4",
     "gatsby-plugin-offline": "^3.2.8",
     "gatsby-plugin-react-helmet": "^3.3.3",
