--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-remark-prismjs": "^3.5.3",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-transformer-json": "^2.4.5",
     "gatsby-transformer-remark": "^2.8.14",
     "gatsby-transformer-sharp": "^2.5.4",
     "prism-themes": "^1.4.0",
