--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/styles": "^4.10.0",
     "gatsby": "^2.23.22",
     "gatsby-image": "^2.4.12",
+    "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-emotion": "^4.3.9",
     "gatsby-plugin-manifest": "^2.4.17",
     "gatsby-plugin-material-ui": "^2.1.9",
