--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-starter-julia",
+  "name": "gatsby-starter-asi",
   "private": true,
   "description": "A minimal blog template built with Gatsby",
   "version": "0.1.0",
